; ModuleID = '/home/carl/AnghaBench/vlc/src/video_output/extr_video_epg.c_vout_OSDPrintTime.c'
source_filename = "/home/carl/AnghaBench/vlc/src/video_output/extr_video_epg.c_vout_OSDPrintTime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tm = type { i32, i32 }

@.str = private unnamed_addr constant [12 x i8] c"%2.2d:%2.2d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @vout_OSDPrintTime to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @vout_OSDPrintTime(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca %struct.tm, align 4
  store i32 %0, i32* %2, align 4
  %5 = call i32 @localtime_r(i32* %2, %struct.tm* %4)
  %6 = getelementptr inbounds %struct.tm, %struct.tm* %4, i32 0, i32 1
  %7 = load i32, i32* %6, align 4
  %8 = getelementptr inbounds %struct.tm, %struct.tm* %4, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i64 @asprintf(i8** %3, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i32 %7, i32 %9)
  %11 = icmp slt i64 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %1
  store i8* null, i8** %3, align 8
  br label %13

13:                                               ; preds = %12, %1
  %14 = load i8*, i8** %3, align 8
  ret i8* %14
}

declare dso_local i32 @localtime_r(i32*, %struct.tm*) #1

declare dso_local i64 @asprintf(i8**, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
